syntax = "proto3";

package minion;

service Minion {
    rpc GetNamespaces(QueryGetNamespaces) returns (Namespaces) {}
    rpc GetTables(QueryGetTables) returns (Tables) {}

    rpc ScheduleBackup(QueryScheduleBackup) returns (Response) {}
    rpc UnscheduleBackup(QueryScheduleBackup) returns (Response) {}
    rpc StartBackup(QueryStartBackup) returns (Response) {}
}

message QueryGetNamespaces {
    string db = 1;
    string namespace = 2;
}

message QueryGetTables {
    string db = 1;
    string table = 2;
}

message QueryScheduleBackup {
    string db = 1;
    string namespace = 2;
    string table = 3;
    string timestamp = 4;
}

message QueryStartBackup {
    string db = 1;
    string namespace = 2;
    string table = 3;
}

message Namespaces {
    repeated string names = 1;
    repeated string sizes = 2;
    repeated double ok = 3;
}

message Tables {
    repeated string tables = 1;
}

message Response {
    string msg = 1;
}
